# DeshChain-Ecosystem

./: .gitignore  50_YEAR_CULTURAL_ROADMAP.md  BACKWARD_COMPATIBILITY_STRATEGY.md  BALANCED_FOUNDER_PROPOSAL.md  BLOCKCHAIN_FOUNDERS_COMPARISON.md  CHANGELOG.md  CLAUDE.md  CLEAN_CODEBASE_ARCHITECTURE.md  CODEBASE_ANALYSIS.md  CODEBASE_ANALYSIS_REPORT.md  COMPLETE_CODEBASE_FILE_MAPPING.md  COMPREHENSIVE_FESTIVAL_CELEBRATION_SYSTEM.md  COMPREHENSIVE_FOUNDER_ROYALTY.md  CREATOR_WEALTH_ANALYSIS.md  DEPLOYMENT.md  DESHCHAIN_ECONOMIC_MODEL_FINAL.md  DESHCHAIN_ECONOMIC_TRANSFORMATION_BLUEPRINT.md  DESHCHAIN_SOCIAL_IMPACT_MODEL.md  DESHCHAIN_WHITEPAPER.md  DESHCHAIN_WHITEPAPER_V2.md  DHANSETU_CODEBASE_ANALYSIS_AND_REFACTOR_PLAN.md  DHANSETU_COMPREHENSIVE_IMPLEMENTATION_PLAN.md  DHANSETU_REFACTOR_INSTRUCTIONS.md  DHANSETU_SPRINT_PLAN.md  DHANSETU_TECHNICAL_TASKS.md  DHANSETU_UNIFIED_APP_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  DeshChain_Whitepaper.md  Dockerfile  Dockerfile.node  Dockerfile.simple  Dockerfile.testnet  ECOSYSTEM_REVENUE_GENERATION_STRATEGY.md  ENHANCED_URBAN_PENSION_CREATIVE_PROPOSAL.md  FINAL_PROJECT_SUMMARY.md  FINANCIAL_ANALYSIS_REPORT.md  FINANCIAL_RISK_ANALYSIS.md  FOUNDER_ACTUAL_ALLOCATION.md  FOUNDER_GOVERNANCE_PROTECTION.md  FOUNDER_LEGACY_ROYALTY.md  (+52 more)
app/: app.go  encoding.go  genesis.go  genesis_nft_handler.go  openapi.go  upgrades.go
backend/: Dockerfile.simple
batua/: README.md  TASKS.md
cultural-data/: LICENSE  README.md  package.json
deployment/: mainnet_launch_plan.md  production_readiness_checklist.md
docker/: Dockerfile.validator  entrypoint.sh
docs/: DESHCHAIN-FINAL-MASTER-SUMMARY.md  DESHCHAIN_SOVEREIGN_WEALTH_FUND.md  DINR-IMPLEMENTATION-PLAN.md  GENESIS_VALIDATOR_NFT_SYSTEM.md  GRAM_PENSION_SUSTAINABILITY_ANALYSIS.md  IDENTITY_INTEGRATION_SUMMARY.md  IDENTITY_MIGRATION_GUIDE.md  KUBERNETES_TESTNET_DEPLOYMENT.md  MODULE_OVERVIEW.md  MONEY_ORDER_API.md  MONEY_ORDER_ARCHITECTURE.md  NODE_SETUP.md  SECURITY_AUDIT_DSWF_CHARITABLETRUST.md  TECHNICAL_ARCHITECTURE.md  VALIDATOR_GUIDE.md  VALIDATOR_NFT_PRODUCTION_READINESS.md  VALIDATOR_REFERRAL_SYSTEM.md  VALIDATOR_STAKING_SECURITY.md  chain_economics.md  deshchain-complete-revenue-model.md  deshchain-distribution-table.md  deshchain-final-comprehensive-summary.md  deshchain-revenue-comparison.md  deshchain-visual-summary.md  dinr-algorithmic-stablecoin-model.md  dinr-executive-summary.md  dinr-final-fail-proof-model.md  dinr-final-unified-revenue-model.md  dinr-financial-analysis-and-mechanics.md  dinr-global-remittance-model.md  dinr-implementation-guide.md  dinr-integration-summary.md  dinr-loopholes-and-vulnerabilities.md  dinr-sustainable-model-v2.md  dinr-trade-finance-protocol.md  dual-token-implementation-guide.md  dual-token-sustainable-model.md  financial-sustainability-analysis.md  loopholes-exploitation-vectors.md  money-order-api-reference.md  (+4 more)
explorer/: Dockerfile.advanced  Dockerfile.backend  Dockerfile.frontend  Dockerfile.simple  package.json  tsconfig.json
faucet/: Dockerfile  Dockerfile.advanced  Dockerfile.simple  index.js  package.json
genesis/: mainnet-genesis.json  testnet-genesis.json
kisaan-mitra/: README.md
landing/: index.html  nginx.conf
mobile/: App.tsx  package.json
money-order/: IMPLEMENTATION_PLAN.md  README.md
nginx/: nginx-letsencrypt.conf  nginx.conf
proto/: buf.yaml
scripts/: init-mainnet.sh  (+12 more)
sdk/python/: README.md  pyproject.toml  requirements.txt  setup.py
sdk/python/deshchain/: __init__.py  client.py  constants.py  exceptions.py
sdk/python/deshchain/modules/: __init__.py  cultural.py  governance.py  lending.py  moneyorder.py  sikkebaaz.py
sdk/python/deshchain/types/: __init__.py
sdk/python/deshchain/utils/: __init__.py  cultural.py  encoding.py  festival.py  validation.py
(+1071 files in other folders)
